# mcp-test

./: .env  main.py  pyproject.toml  requirements.txt
clent/: client.py  new_client.py  new_client2.py  new_client3.py  research_client.py
papers/apples/: papers_info.json
papers/rock_formations/: papers_info.json
papers/space_dust/: papers_info.json
papers/tooling/: papers_info.json
server/tools/: new_tools.py
